# ecgformer.c

./: .gitignore  .mise.toml  config.py  model.py  pyproject.toml  qmodel.py  qtrain.py  requirements.txt  train.py
assets/: .$model_components.drawio.bkp  input.txt  model_components.drawio
assets/params/: classifier.linear.bias.txt  classifier.linear.weight.txt  embedding.linear.bias.txt  embedding.linear.weight.txt  encoder_layers.0.attention.final_projection.bias.txt  encoder_layers.0.attention.final_projection.weight.txt  encoder_layers.0.attention.keys_projection.bias.txt  encoder_layers.0.attention.keys_projection.weight.txt  encoder_layers.0.attention.queries_projection.bias.txt  encoder_layers.0.attention.queries_projection.weight.txt  encoder_layers.0.attention.values_projection.bias.txt  encoder_layers.0.attention.values_projection.weight.txt  encoder_layers.0.mlp.linear1.bias.txt  encoder_layers.0.mlp.linear1.weight.txt  encoder_layers.0.mlp.linear2.bias.txt  encoder_layers.0.mlp.linear2.weight.txt  encoder_layers.1.attention.final_projection.bias.txt  encoder_layers.1.attention.final_projection.weight.txt  encoder_layers.1.attention.keys_projection.bias.txt  encoder_layers.1.attention.keys_projection.weight.txt  encoder_layers.1.attention.queries_projection.bias.txt  encoder_layers.1.attention.queries_projection.weight.txt  encoder_layers.1.attention.values_projection.bias.txt  encoder_layers.1.attention.values_projection.weight.txt  encoder_layers.1.mlp.linear1.bias.txt  encoder_layers.1.mlp.linear1.weight.txt  encoder_layers.1.mlp.linear2.bias.txt  encoder_layers.1.mlp.linear2.weight.txt
c/: CMakeLists.txt
c/include/: components.h  ops.h
c/lib/sml/: demo.c  makefile  smlcomp.c
c/src/: components.c  main.c  ops.c
python/: config.py  export.py  model.py  pyproject.toml  test.py  train.py
